--- a/src/index.html
+++ b/src/index.html
@@ -24,4 +24,5 @@
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
+  <script src="../js/modal.js"></script>
 </html>
